--- a/src/testeCss/botoes.html
+++ b/src/testeCss/botoes.html
@@ -1,13 +1,72 @@
-<style>
-    button {
-        background-color: purple;
-        color:chartreuse;
-        border-color: black;
-        height: 300px;
-        width: 300px;
-    }
-</style>
+    <style>
+        button {
+            background-color: rgb(158, 4, 158);
+            color:chartreuse;
+            border: none;
+            height: 36px;
+            width: 200px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+    </style>
 
-<button>
-    CLIQUE EM MIM!
-</button>
+    <button>
+        UNIT 01 COLOURS
+    </button>
+
+    <style>
+
+        .youtube {
+            background-color: rgb(170, 14, 14);
+            color:rgb(255, 255, 255);
+            font-size: 26;
+            border: none;
+            height: 36px;
+            width: 150px;
+            border-radius: 2px;
+            cursor: pointer;
+            margin-left: 10px;
+        }
+        .Twitter_Join {
+            background-color: #ffffff;
+            color:rgb(15, 147, 200);
+            border-color: rgb(15, 147, 200);
+            border-style: solid;
+            border-width: 1px;
+            font-size: 20;
+            height: 36px;
+            width: 150px;
+            border-radius: 10px;
+            cursor: pointer;
+            margin-left: 10px;
+        }
+
+        .Twitter_Tweet {
+            background-color: rgb(15, 147, 200);
+            color:rgb(221, 232, 237);
+            border: none;
+            font-size: 20;
+            height: 36px;
+            width: 150px;
+            border-radius: 50px;
+            cursor: pointer;
+            margin-left: 10px;
+            font-weight: bold;
+        }
+    </style>
+
+    <button class="youtube">
+         Subscribe
+    </button>
+
+    <button class="Twitter_Join">
+        Join
+    </button>
+
+    <style>
+
+    </style>
+
+    <button class="Twitter_Tweet">
+        Tweet
+    </button>
